--- a/闭包的应用.html
+++ b/闭包的应用.html
@@ -32,6 +32,32 @@
     fn2()();
 
 
+    function foo() {
+        var obj = {
+            a:1
+        }
+        return obj
+    }
+    var f1 = foo();
+    var f2 = foo();
+    f1.a = 2;
+    console.log(f2.a)
+
+    function foo2() {
+        var obj = {
+            a:1
+        }
+        return function () {
+            return obj
+        }
+    }
+    var f11 = foo2();
+    var f22 = foo2();
+    f11().a = 2;
+    console.log( f22().a )
+
+    //f11 是个闭包的话，f1 是闭包吗？ 如果不是闭包，那是什么
+
 </script>
 
 
