--- a/购物逻辑.html
+++ b/购物逻辑.html
@@ -8,25 +8,132 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .content{
+            width: 500px;
+            height: 500px;
+            margin:100px auto;
+            border: 1px solid #ccc;
+        }
+        .pie{
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background: yellowgreen;
+            background-image: linear-gradient(to right, transparent 50%, #655 0);
+        }
+        .pie::before {
+            content: '';
+            display: block;
+            margin-left: 50%;
+            height: 100%;
+            border-radius: 0 100% 100% 0/50%;
+            background-color: inherit;
+            transform-origin: left;
+            transform: rotate(.2turn);
+        }
+        .loading {
+            margin: 100px auto;
+            width: 8em;
+            height: 8em;
+            position: relative;
+        }
+
+        .loading .progress {
+            position: absolute;
+            width: 6em;
+            height: 6em;
+            background-color: white;
+            border-radius: 50%;
+            left: 1em;
+            top: 1em;
+            line-height: 6em;
+            text-align: center;
+        }
+
+        .left,
+        .right {
+            width: 4em;
+            height: 8em;
+            overflow: hidden;
+            position: relative;
+            float: left;
+            background-color: #999999
+        }
+
+        .left {
+            border-radius: 8em 0 0 8em;
+        }
+
+        .right {
+            border-radius: 0 8em 8em 0;
+        }
+
+        .left:after,
+        .right:after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 4em;
+            height: 8em;
+            background-color: white;
+            border-radius: 8em 0 0 8em;
+            background-color: red;
+        }
+
+        .right:after {
+            content: "";
+            position: absolute;
+            display: block;
+            border-radius: 0 8em 8em 0;
+        }
+        .left:after {
+            transform-origin: right center;
+        }
+
+        .right:after {
+            transform-origin: left center;
+            transform: rotateZ(45deg);
+        }
+        #progress{
+            width: 50%;
+            height: 30px;
+            border:1px solid #ccc;
+            border-radius: 15px;
+            margin: 50px 0 0 100px;
+            overflow: hidden;
+            box-shadow: 0 0 5px 0px #ddd inset;
+        }
+
+        #progress span {
+            display: inline-block;
+            width: 70%;
+            height: 100%;
+            background: #2989d8; /* Old browsers */
+            background: -moz-linear-gradient(45deg, #2989d8 33%, #7db9e8 34%, #7db9e8 59%, #2989d8 60%); /* FF3.6+ */
+            background: -webkit-gradient(linear, left bottom, right top, color-stop(33%,#2989d8), color-stop(34%,#7db9e8), color-stop(59%,#7db9e8), color-stop(60%,#2989d8)); /* Chrome,Safari4+ */
+            background: -webkit-linear-gradient(45deg, #2989d8 33%,#7db9e8 34%,#7db9e8 59%,#2989d8 60%); /* Chrome10+,Safari5.1+ */
+            background: -o-linear-gradient(45deg, #2989d8 33%,#7db9e8 34%,#7db9e8 59%,#2989d8 60%); /* Opera 11.10+ */
+            background: -ms-linear-gradient(45deg, #2989d8 33%,#7db9e8 34%,#7db9e8 59%,#2989d8 60%); /* IE10+ */
+            background: linear-gradient(45deg, #2989d8 33%,#7db9e8 34%,#7db9e8 59%,#2989d8 60%); /* W3C */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2989d8', endColorstr='#2989d8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+            background-size: 60px 30px;
+            text-align: center;
+            color:#fff;
+        }
+    </style>
 </head>
 <body>
 <div class="content">
-
-
-    <!--your content-->
-    <script>
-        var json = [{
-            id:1,
-            title:"xxx大衣",
-            type:[
-                {subTitle:'酒红色',}
-            ]
-        }]
-
-
-
-    </script>
-
+    <div class="pie"></div>
+    <div class="loading">
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="progress">85%</div>
+    </div>
+    <div id="progress">
+        <span>70%</span>
+    </div>
 </div>
 </body>
 </html>
