--- a/面试/点格仔面试题.html
+++ b/面试/点格仔面试题.html
@@ -66,25 +66,29 @@
                 let target = e.target.id.split(",");
                 let a = target[0] = parseInt(target[0])
                 let b = target[1] = parseInt(target[1])
-                if (a == 1 && b == n) { //角
-                    this.point = [[a, b - 1], [a + 1, b]]
-                } else if (a == n && b == 1) {
-                    this.point = [[a - 1, b], [a, b + 1]]
-                } else if (a == n && b == n) {
-                    this.point = [[a - 1, b], [a, b - 1]]
-                } else if (a == 1 && b == 1) {
-                    this.point = [[1, 2], [2, 1]]
-                } else if (target.indexOf(1) === -1 && target.indexOf(n) === -1) { //非角非边
-                    this.point = [[a - 1, b], [a + 1, b], [a, b - 1], [a, b + 1]]
-                } else if (a == 1) { //边
-                    this.point = [[a, b - 1], [a, b + 1], [a + 1, b]]
-                } else if (a == n) {
-                    this.point = [[a, b - 1], [a, b + 1], [a - 1, b]]
-                } else if (b == 1) {
-                    this.point = [[a - 1, b], [a + 1, b], [a, b + 1]]
-                } else if (b == n) {
-                    this.point = [[a - 1, b], [a + 1, b], [a, b - 1]]
-                }
+                //方法1 ，判断两个坐标，点的是哪个位置，然后给出相邻格坐标，缺点是不够优雅
+                // if (a == 1 && b == n) { //角
+                //     this.point = [[a, b - 1], [a + 1, b]]
+                // } else if (a == n && b == 1) {
+                //     this.point = [[a - 1, b], [a, b + 1]]
+                // } else if (a == n && b == n) {
+                //     this.point = [[a - 1, b], [a, b - 1]]
+                // } else if (a == 1 && b == 1) {
+                //     this.point = [[1, 2], [2, 1]]
+                // } else if (target.indexOf(1) === -1 && target.indexOf(n) === -1) { //非角非边
+                //     this.point = [[a - 1, b], [a + 1, b], [a, b - 1], [a, b + 1]]
+                // } else if (a == 1) { //边
+                //     this.point = [[a, b - 1], [a, b + 1], [a + 1, b]]
+                // } else if (a == n) {
+                //     this.point = [[a, b - 1], [a, b + 1], [a - 1, b]]
+                // } else if (b == 1) {
+                //     this.point = [[a - 1, b], [a + 1, b], [a, b + 1]]
+                // } else if (b == n) {
+                //     this.point = [[a - 1, b], [a + 1, b], [a, b - 1]]
+                // }
+                //方法二，假设画布无限大，直接给出相邻四个角，然后再帅选出不符合范围的角，完美
+                this.point = [[a,b-1],[a,b+1],[a-1,b],[a+1,b]]
+                    .filter(o=> o[0]<=n&&o[0]>=1&&o[1]<=n&&o[1]>=1)
                 this.redPoint(this.point)
             })
         }
